test/corpus/tuple.txt
===========
Tuple
===========

{}
{1, 2, 3}
{[:a], 1, true}

---

(source_file
  (expression (tuple))
  (expression (tuple (number) (number) (number)))
  (expression (tuple
    (list (atom))
    (number)
    (boolean))))

====================
Tuple - Error
====================

{1 2}

---

(source_file (expression (tuple (number) (ERROR))))

====================
Tuple - Trailing Separator
====================

{1,2,3,}

---

(source_file (expression (tuple (number) (number) (number))))